@@ -24,6 +24,8 @@
             <include>View_512_Wall_Icons</include>
             <include>View_513_Wall_Circle</include>
             <include>View_520_Showcase_Square</include>
+
+            <include>Object_Scrollbars</include>
         </control>
         <!-- Hidden Buttons -->
         <include>Defs_Options_StandardButtons</include>
