@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Foundation -->
 <window id="2">
-    <defaultcontrol always="true">500</defaultcontrol>
+    <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
     
-    <views>500,510,511,513,515</views>
+    <views>50,500,510,511,513,515</views>
     <controls>
         <include>Global_Background</include>
         <include>Topbar</include>
         <control type="list" id="300">
             <visible allowhiddenfocus="true">Control.HasFocus(300)</visible>
-            <ondown>500</ondown>
+            <ondown>50</ondown>
             <include>Topbar_Menu_Layout</include>
             <include>Items_View</include>
         </control>
@@ -18,11 +18,13 @@
         <control type="group">
             <visible allowhiddenfocus="true">!$EXP[Exp_ShowPlotOverlay]</visible>
             <include>Animation_FadeInOut</include>
+            <include>View_50_List</include>
             <include>View_500_List_Square</include>
             <include>View_510_Wall_Square</include>
             <include>View_511_Wall_Landscape</include>
             <include>View_513_Wall_Circle</include>
             <include>View_515_Wall_Landscape_Small</include>
+            <include>Object_Scrollbars</include>
         </control>
 
         <include>Defs_Options_StandardButtons</include>
