@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Foundation -->
 <window id="6">
-    <defaultcontrol always="true">50,500</defaultcontrol>
+    <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
     
     <views>50,500</views>
@@ -11,12 +11,13 @@
         <include>Topbar</include>
 
         <control type="list" id="300">
-            <ondown>500</ondown>
+            <ondown>50</ondown>
             <include>Topbar_Menu_Layout</include>
             <include>Items_Playlist</include>
         </control>
         <include>View_50_List</include>
         <include>View_500_List_Square</include>
+        <include>Object_Scrollbars</include>
         <!-- Hidden Buttons -->
         <include>Defs_Options_StandardButtons</include>
         <control type="button" id="21">
