@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Foundation -->
 <window id="1">
-    <defaultcontrol always="true">500</defaultcontrol>
+    <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
     
-    <views>500,510</views>
+    <views>50,500,510</views>
     
     <controls>
         <include>Global_Background</include>
@@ -12,12 +12,14 @@
         <control type="group">
             <visible allowhiddenfocus="true">!$EXP[Exp_ShowPlotOverlay]</visible>
             <include>Animation_FadeInOut</include>
+            <include>View_50_List</include>
             <include>View_500_List_Square</include>
             <include>View_510_Wall_Square</include>
+            <include>Object_Scrollbars</include>
         </control>
         
         <control type="list" id="300">
-            <ondown>500</ondown>
+            <ondown>50</ondown>
             <include>Topbar_Menu_Layout</include>
             <include>Items_View</include>
         </control>
