@@ -33,25 +33,8 @@
             <include>View_524_Showcase_Seasons</include>
             <include>View_53_Poster</include>
 
-            <include content="Object_Scrollbar_Vert">
-                <param name="visible" value="Control.IsVisible(50) | Control.IsVisible(500) | Control.IsVisible(501) | Control.IsVisible(502) | Control.IsVisible(503) | Control.IsVisible(51) | Control.IsVisible(510) | Control.IsVisible(511) | Control.IsVisible(512) | Control.IsVisible(513) | Control.IsVisible(514) | Control.IsVisible(515)" />
-            </include>
-
-            <include content="Object_Scrollbar_Horz">
-                <param name="visible" value="Control.IsVisible(52) | Control.IsVisible(520) | Control.IsVisible(521) | Control.IsVisible(522) | Control.IsVisible(523) | Control.IsVisible(53)" />
-            </include>
+            <include>Object_Scrollbars</include>
         </control>
-
-        <!-- <control type="group">
-            <visible>Control.HasFocus(300)</visible>
-            <include>Global_Overlay</include>
-        </control>
-        <include content="Dialog_PowerMenu">
-            <param name="id" value="300" />
-            <param name="header" value="View Options" />
-            <param name="items" value="Items_View" />
-            <param name="visible" value="Control.HasFocus(300)" />
-        </include> -->
 
         <control type="list" id="300">
             <ondown>50</ondown>
