@@ -4,6 +4,7 @@
 - Kiosk mode
 - Lengthen fixed-width horizontal home menu when clock is disabled
 - FromDirector sortby=year
+- Fix missing scrollbars
 
 0.9.46
 - Add blur effect settings
